<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="isLoading" type="boolean"/>
        <variable name="gitViewModel" type="gresanu.emanuel.vasile.githubrepofetch.viewmodel.GitViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <TextView
                android:id="@+id/loading_project"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/loading_project"
                android:textAlignment="center"
                app:visibleGone="@{isLoading}"
                app:layout_constraintTop_toTopOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                app:visibleGone="@{!isLoading}" android:id="@+id/linearLayout" tools:layout_editor_absoluteX="8dp">

            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="@dimen/item_horizontal_margin"
                    android:layout_marginEnd="@dimen/item_horizontal_margin"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardElevation="3dp"
                    app:cardCornerRadius="@dimen/card_corners"
                    app:elevation="5dp">


                <LinearLayout
                        android:layout_marginStart="@dimen/item_horizontal_margin"
                        android:layout_marginEnd="@dimen/item_horizontal_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/project_size"
                            android:textSize="@dimen/project_header2"
                            android:text="@{String.format(@string/project_size, gitViewModel.gitRepo.size)}"
                            android:textAlignment="center"
                            android:paddingBottom="5dp"/>

                    <TextView
                            android:id="@+id/project_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/stargazers_count"
                            android:textSize="@dimen/project_header2"
                            android:text="@{String.format(@string/project_stargazers, gitViewModel.gitRepo.stargazers_count)}"/>

                    <TextView
                            android:id="@+id/languages"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/project_fork"
                            android:textSize="@dimen/project_header2"
                            android:text="@{String.format(@string/project_forks, gitViewModel.gitRepo.forks_count)}"/>

                    <TextView
                            android:id="@+id/project_open_issues"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/contributors"
                            android:textSize="@dimen/project_header2"
                            android:text="@string/contributors"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/contributors_list"
                    android:contentDescription="@string/project_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    tools:listitem="@layout/recycler_git_contributors"
                    app:setContributors="@{gitViewModel.gitRepo.contributors}"/>


        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</layout>